# ParallelSearch

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  excludeList.txt  output.iuml  runTestCampain.sh  sonar-project.properties  usr_paths.mk
.scannerwork/: report-task.txt
cmake/: codeCoverage.cmake  compile.cmake  scripts.cmake  usr_paths.cmake
parallel_search/client/main/: CMakeLists.txt  main.cpp
parallel_search/main/: CMakeLists.txt  main.cpp
parallel_search/search_engine/: CMakeLists.txt
parallel_search/search_engine/inc/: advanced_math.h
parallel_search/search_engine/src/: advanced_math.c
parallel_search/server/main/: CMakeLists.txt  main.cpp
parallel_search/server/search_engine/: CMakeLists.txt
parallel_search/server/search_engine/inc/: search_engine.h
parallel_search/server/search_engine/src/: search_engine.cpp
parallel_search/server/threads/: CMakeLists.txt
parallel_search/server/words_list/: CMakeLists.txt
parallel_search/server/words_list/inc/: words_list.h
parallel_search/server/words_list/src/: words_list.cpp
parallel_search/threads/inc/: base_math.h
parallel_search/threads/src/: base_math.c
parallel_search/usr_functions/: CMakeLists.txt
parallel_search/usr_functions/inc/: usr_fct.h
parallel_search/usr_functions/src/: usr_fct.cpp
parallel_search/words_list/: CMakeLists.txt
parallel_search/words_list/inc/: words_list.h
parallel_search/words_list/src/: words_list.cpp
search_engine/: CMakeLists.txt
search_engine/engine/: CMakeLists.txt
search_engine/engine/inc/: engine.h
search_engine/engine/src/: engine.cpp
search_engine/tools/inc/: tools.h
search_engine/tools/src/: tools.cpp
search_engine/words_list/inc/: words_list.h
search_engine/words_list/src/: words_list.cpp
tests/: CMakeLists.txt
tests/IntegrationTests/: CMakeLists.txt
tests/IntegrationTests/TI-0001/: CMakeLists.txt  ti_1.cpp
tests/IntegrationTests/TI-0002/: CMakeLists.txt  client.cpp  server.cpp
tests/IntegrationTests/TI-0003/: CMakeLists.txt  ti_3.cpp
tests/IntegrationTests/TI-0004/: CMakeLists.txt  ti_4.cpp  xdev.h
tests/IntegrationTests/TI-0005/: CMakeLists.txt  example.h  ti_5.cpp
tests/UnitTests/: CMakeLists.txt
tests/UnitTests/TU-0001/: CMakeLists.txt  test_1.cpp
tests/UnitTests/TU-0002/: CMakeLists.txt  test_2.cpp
tests/UnitTests/TU-0002/usr_fct/src/: usr_fct.cpp
tests/UnitTests/TU-0003/: CMakeLists.txt  test_3.cpp
tests/UnitTests/TU-0004/: CMakeLists.txt  test_4.cpp
tests/UnitTests/TU-0004/usr_functions/src/: usr_fct.cpp
tests/UnitTests/parallel_search/base_math/tu_base_math_02/: CMakeLists.txt
tests/UnitTests/parallel_search/main/tu_main_03/: test.cpp
tests/parallel_search/: CMakeLists.txt
tests/parallel_search/base_math/tu_base_math_01/: CMakeLists.txt  base_math.cpp
tests/parallel_search/main/tu_main_01/: CMakeLists.txt  main.cpp
tests/parallel_search/main/tu_main_02/: CMakeLists.txt
tests/parallel_search/main/tu_main_03/: CMakeLists.txt  main.cpp  mock_turtle.h  turtle.h
tests/parallel_search/words_list/TU_WORDS_LIST/: CMakeLists.txt  tu_words_list.cpp
usr_fct/inc/: usr_fct.h
usr_fct/src/: usr_fct.cpp
